--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,10 @@
     <meta name="theme-color" content="#000000" />
   </head>
   <body>
-    <div id="root" style="padding: 0px"></div>
+    <div
+      id="root"
+      style="padding: 0px; background-color: rgba(250, 250, 250)"
+    ></div>
     <script>
       var mountNode = document.getElementById("root");
     </script>
